#7685 fix scrollbar buttons missing icons (#7838)

--- a/js/notebook/src/tableDisplay/dataGrid/style/dataGrid.scss
+++ b/js/notebook/src/tableDisplay/dataGrid/style/dataGrid.scss
@@ -511,6 +511,11 @@ a.dtmenu {
 }
 
 .p-ScrollBar {
+  .p-ScrollBar-button {
+    font: normal normal normal 14px/1 FontAwesome;
+    text-align: center;
+  }
+
   &[data-orientation='horizontal'] {
     min-height: 16px;
     max-height: 16px;
@@ -524,6 +529,19 @@ a.dtmenu {
       min-width: 15px;
       border-left: $gridBorder;
       border-right: $gridBorder;
+    }
+
+    .p-ScrollBar-button {
+      &[data-action='increment'] {
+        &:before {
+          content: "\f0da";
+        }
+      }
+      &[data-action='decrement'] {
+        &:before {
+          content: "\f0d9";
+        }
+      }
     }
   }
 
@@ -540,6 +558,20 @@ a.dtmenu {
       min-height: 15px;
       border-top: $gridBorder;
       border-bottom: $gridBorder;
+    }
+
+
+    .p-ScrollBar-button {
+      &[data-action='increment'] {
+        &:before {
+          content: "\f0d7";
+        }
+      }
+      &[data-action='decrement'] {
+        &:before {
+          content: "\f0d8";
+        }
+      }
     }
   }
 }
